# esp-layout-controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pytest.ini  sdkconfig.defaults  sdkconfig.test.defaults  sdkconfig.tests  test_app.py
.github/: copilot-instructions.md
docs/: CPP_MIGRATION.md  PROJECT_OVERVIEW.md  THROTTLE_UI_IMPLEMENTATION_PLAN.md  WITHROTTLE_PROTOCOL.md
docs/architecture/: NVS_STORAGE.md  STATE_MACHINES.md  SYSTEM_OVERVIEW.md  THREADING_MODEL.md
docs/archive/: ARCHITECTURE.md  CPP_MIGRATION.md  MIGRATION_COMPLETE.md  README.md  THROTTLE_UI_IMPLEMENTATION_PLAN.md
docs/components/: COMMUNICATION_LAYER.md  CONTROLLER_LAYER.md  HARDWARE_LAYER.md  MODEL_LAYER.md  UI_LAYER.md
docs/flows/: CONNECTION_FLOW.md  FUNCTION_CONTROL.md  RELEASE_FLOW.md  SCREEN_NAVIGATION.md  SPEED_CONTROL.md  STARTUP_FLOW.md  THROTTLE_SELECTION.md  TRACK_POWER.md
docs/physical-layout/: WESTGATE_HOLLOW_YARD.md  layout_topology.md
docs/protocols/: JMRI_JSON_API.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lvgl_port.c  main.c  test_throttle_screen.c  test_throttle_screen.h  throttle_meter.c  throttle_meter.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/communication/: JmriJsonClient.cpp  JmriJsonClient.h  WiFiManager.cpp  WiFiManager.h  WiThrottleClient.cpp  WiThrottleClient.h
main/controller/: AppController.cpp  AppController.h  JmriConnectionController.cpp  JmriConnectionController.h  README.md  ThrottleController.cpp  ThrottleController.h  WiFiController.cpp  WiFiController.h
main/hardware/: README.md  RotaryEncoderHal.cpp  RotaryEncoderHal.h
main/model/: Knob.cpp  Knob.h  Locomotive.cpp  Locomotive.h  Roster.cpp  Roster.h  Throttle.cpp  Throttle.h
main/tests/: LocomotiveTests.cpp  ModelRosterTests.cpp  ProtocolParsingTests.cpp  TestRunner.cpp  ThrottleControllerTests.cpp  ThrottleModelTests.cpp
main/ui/: JmriConfigScreen.cpp  JmriConfigScreen.h  MainScreen.cpp  MainScreen.h  ThrottleMeter.cpp  ThrottleMeter.h  VirtualEncoderPanel.cpp  VirtualEncoderPanel.h  WiFiConfigScreen.cpp  WiFiConfigScreen.h  jmri_config_wrapper.cpp  main_screen_wrapper.cpp  main_screen_wrapper.h  wifi_config_wrapper.cpp  wifi_config_wrapper.h
main/ui/components/: FunctionPanel.cpp  FunctionPanel.h  PowerStatusBar.cpp  PowerStatusBar.h  RosterCarousel.cpp  RosterCarousel.h  ThrottleMeter.cpp  ThrottleMeter.h  VirtualEncoderPanel.cpp
main/ui/wrappers/: jmri_config_wrapper.cpp  jmri_config_wrapper.h  main_screen_wrapper.cpp  main_screen_wrapper.h  wifi_config_wrapper.cpp
main/utils/: README.md
tools/: ensure-idf.ps1
